--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Living</title>
 </head>
 <body class="container">
-    <header class="flex justify-around p-2-top mb-3">
+    <header class="flex justify-around p-2-top mb-3"><a name="header"></a>
        <section class="flex flex-col justify-center gap-2">
         <div class="flex items-center gap mb-2">
             <span class="logo-box">fffff</span>
@@ -50,7 +50,7 @@
         <h3 class="title-3">Living</h3>
         </div>
         <p style="text-align: center; width: 40%;">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software.</p>
-        <button class="button-default">Voltar para o topo</button>
+        <button class="button-default"><a href="#header">Voltar para o topo</a></button>
     </footer>
     <script src="pages/home/index.js"></script>
 </body>
